--- a/phylo_tree_ape.Rmd
+++ b/phylo_tree_ape.Rmd
@@ -7,6 +7,8 @@ output: html_document
 This script builds a tree in the package poppr
 it then plots the tree in ape
 still need to figure out how to export the tree object
+
+NOTE: The package geiger has some weird interaction issues with other packages. If it doesn't want to load just restart R and then go through this analysis before running other scripts.
 ```{r setup, include=FALSE}
 library("adegenet")
 library("poppr")
@@ -24,14 +26,14 @@ library("dendextend", lib.loc="~/R/win-library/3.5")
 
 #Load Data
 ```{r}
-WAE_data = read.genepop("../SNPS/v6_keep_max_maf_byLocus.recode.gen", ncode = 3)
+WAE_data = read.genepop("../SNPS/v7_IAGLR_snps.recode.gen", ncode = 3)
 ```
 
 #Trees
   NOTE: use the "cutoff = " argument in "aboot()" function to set the minimum bootstrap value to report.
 ```{r ,build tree (10 individuals)}
 WAE_genpop_nei = genind2genpop(WAE_data, pop = WAE_data@pop) %>% 
-  aboot(cutoff = 0, quiet = TRUE, sample = 1000, distance = nei.dist)
+  aboot(cutoff = 75, quiet = TRUE, sample = 1000, distance = nei.dist)
 
 plot(WAE_genpop_nei)
 #format names to remove sample ID
@@ -41,15 +43,6 @@ WAE_genpop_nei$tip.label = gsub("-","",WAE_genpop_nei$tip.label)
 WAE_genpop_nei$node.label = round(WAE_genpop_nei$node.label,0)
 #set colors based on repU
 WAE_genpop_nei$tip.label
-
-repu_mono_MN_shades = c("#FF9933","#0000FF","#0000FF",
-         "#9933FF","#00cc99","#9933FF",
-         "#000000","#0000FF","#00cc99",
-         "#000000","#9933FF","#0000FF",
-         "#00cc99","#00cc99","#666666",
-         "#00cc99","#00cc99","#000000",
-         "#00cc99","#99cc00","#9933FF",
-         "#0000FF","#FF6633")
 
 
 repu_unique_MN_shades = c("#FF9933","#0000FF","#0000FF",
@@ -62,20 +55,30 @@ repu_unique_MN_shades = c("#FF9933","#0000FF","#0000FF",
          "#0000FF","#FF6633")
 ```
 
+
+#Save tree as object
+```{r}
+write.tree(WAE_genpop_nei, "./tree_from_v6_pop_gen_snps.tree")
+```
+
 #read tree 
 If you've already made one and just want to work with the graphical representation, start here.
 
 NOTE: This will CHANGE THE ORDER of your tip.label, so consider this when you are trying to fit colors to tips
   ALSO, consider that other things could be reorganized as well. I have yet to fully investigate this.
+  
 ```{r}
-imported_tree = read.tree("./tree_from_v6_pop_gen_snps.tree")
-imported_tree$tip.label
+WAE_genpop_nei = read.tree("./tree_from_v6_pop_gen_snps.tree")
+WAE_genpop_nei$tip.label
 ```
-#plot tree
+
+#plot tree (Base R)
 Many options available, see ape documentation
+OR
+see ggplot section below (rotate nodes and tips developed here)
 ```{r}
 pdf("./tree.pdf", height = 24, width = 18.54545)
-plot(imported_tree, type = "phylogram",
+plot(WAE_genpop_nei, type = "phylogram",
      use.edge.length = TRUE,
      node.pos = NULL, 
      show.tip.label = TRUE, 
@@ -101,10 +104,10 @@ plot(imported_tree, type = "phylogram",
      open.angle = 0, 
      node.depth = 15,
      align.tip.label = FALSE)
-nodelabels(imported_tree$node.label, adj = c(1.3, -0.5), frame = "n", cex = 1.5,
+nodelabels(WAE_genpop_nei$node.label, adj = c(1.3, -0.5), frame = "n", cex = 1.5,
            font = 3, xpd = TRUE)
 axisPhylo(3)
-plot(imported_tree, type = "phylogram",
+plot(WAE_genpop_nei, type = "phylogram",
      use.edge.length = TRUE,
      node.pos = 2, 
      show.tip.label = TRUE, 
@@ -132,54 +135,62 @@ plot(imported_tree, type = "phylogram",
      align.tip.label = FALSE)
 dev.off()
 ```
-#Save tree as object
-```{r}
-write.tree(WAE_genpop_nei, "./tree_from_v6_pop_gen_snps.tree")
-```
 
 
-```{r}
 
-WAE_tree_reorder = reorder.phylo(WAE_genpop_nei, order = "cladewise", index.only = F)
+# Develop rotate method
 
-WAE_genpop_nei$edge
-WAE_tree_reorder$edge
+This will require some back and forth of 1) identify nodes to flip, 2) flip nodes 3) constrain tip order
+The first plot code will give you ID's of tips and nodes
+The second plot will show you how changes you apply are formatted
 
-plot(WAE_genpop_nei)
-plot(WAE_tree_reorder)
-```
-
-#test rotate
-```{r, read tree}
-WAE_genpop_nei = read.tree("./tree_from_v6_pop_gen_snps.tree")
-```
-
+IF YOU FIND A BETTER WAY, please contact me at boots17917@gmail to let me know and I will update this repository
+thanks!
 ```{r, plot tree using reorder}
-repu_mono_MN_shades2 = c("#00cc99","#996600","#0000FF",
-         "#FF9900","#0000FF","#ffcc00",
-         "#000000","#0000FF","#0000FF",
-         "#0000FF","#000000","#000000",
-         "#9933FF","#9933FF","#666666",
-         "#9933FF","#9933FF","#00cc99",
-         "#00cc99","#00cc99","#00cc99",
-         "#00cc99","#00cc99")
+#0000FF --- WISC
+#9933FF --- CHIP
+#
+#initialize label colors based on tip.names order
+repu_mono_MN_shades2 = c("#cc8b00","#0000FF",
+                         "#0000FF","#9933FF",
+                         "#000000","#9933FF",
+                         "#0000FF","#000000",
+                         "#9933FF","#9933FF",
+                         "#0000FF","#000000",
+                         "#000000","#000000",
+                         "#000000","#000000",
+                         "#0000FF","#000000",
+                         "#000000","#9933FF",
+                         "#0000FF","#cc5f00")
+#Rotate one node at a time, start at tips and work back up the tree
+#I tried a vector of the nodes but it didn't give me the results I expected
+#This does, though I did have to combine this approach with the rotateConstr function in my plot
+#If I didn't do that, then there were lines intersecting.
 
 
-pdf("./v6_natural_pops_rotate_tree.pdf", height = 24, width = 18.54545)
+
+
+# WAE_genpop_nei_rotate = dendextend::rotate(WAE_genpop_nei_rotate, node = 42)
+# WAE_genpop_nei_rotate = dendextend::rotate(WAE_genpop_nei_rotate, node = 41)
+
+#This is a base plot that will give you the ID of node and label numbers to rotate
+pdf("./IAGLR_snps_rotate_tree.pdf", height = 24, width = 18.54545)
 WAE_genpop_nei %>% 
-  rotateConstr(constraint = c(
-    #other
-    "St_Louis_River","WolfR_",
-    "Pike_River",
-    "Manitowish_Lake","Eau_Claire_River",
-    "Lake_Millicent","Chippewa_Flowage","Turtle_Flambeau_Flowage",
-    "Sanford_Lake",
-    "Escanaba","Big_Arbor_Vitae",
-    "Willow_Flowage","Kawaguesaga","Delavan_",
-    "Medicine_Lake",
-    "Lake_Wisconsin_",
-    "Mille_Lacs","Cutfoot_Sioux","Sarah_Lake","Lake_Koronis","Ottertail_Lake","Pine_River","Red_Lake")
-    ) %>% 
+  # rotateConstr(constraint = c(
+  #   "Medicine_Lake",
+  #   "Lake_Wisconsin",
+  #   "WolfR_"
+  #   
+  #   
+  #   # "Escanaba",
+  #   # "Willow_Flowage",
+  #   # "Big_Arbor_Vitae",
+  #   # "Manitowish_Lake",
+  #   # "Lake_Millicent",
+  #   # "Chippewa_Flowage",
+  #   # "Turtle_Flambeau_Flowage"
+  #   )
+  #   ) %>%
   plot(type = "phylogram",
      tip.color = repu_mono_MN_shades2, 
      use.edge.length = TRUE,
@@ -206,6 +217,107 @@ WAE_genpop_nei %>%
      open.angle = 0, 
      node.depth = 15,
      align.tip.label = FALSE)
+nodelabels()
+tiplabels()
+
+
+#Test node rotations here
+WAE_genpop_nei_rotate = dendextend::rotate(WAE_genpop_nei, 42)
+WAE_genpop_nei_rotate = dendextend::rotate(WAE_genpop_nei_rotate, 41)
+# WAE_genpop_nei_rotate = dendextend::rotate(WAE_genpop_nei_rotate, 37)
+
+#check the tip.label names
+WAE_genpop_nei$tip.label
+#Specify tip order (bottom to top) of the tip.labels in rotateConstr() in conjunction with node rotation to get desired format
+WAE_genpop_nei_rotate %>% 
+  rotateConstr(constraint = c(
+    "WolfR_",
+    "Lake_Wisconsin",
+    "Willow_Flowage", 
+    "Big_Arbor_Vitae",
+    "Manitowish_Lake"
+
+
+
+    )
+  ) %>%
+  plot(type = "phylogram",
+     tip.color = repu_mono_MN_shades2, 
+     use.edge.length = TRUE,
+     node.pos = 1, 
+     show.tip.label = TRUE, 
+     show.node.label = T,
+     edge.color = "black", 
+     edge.width = 1, 
+     edge.lty = 1, 
+     font = 2,
+     cex = 2.5, 
+     adj = NULL, 
+     srt = 0, 
+     no.margin = FALSE,
+     root.edge = FALSE, 
+     label.offset = 0, 
+     underscore = FALSE,
+     x.lim = NULL, 
+     y.lim = NULL, 
+     direction = "rightwards",
+     lab4ut = NULL, 
+     plot = TRUE,
+     rotate.tree = 0, 
+     open.angle = 0, 
+     node.depth = 15,
+     align.tip.label = FALSE)
+
+dev.off()
+```
+#Output jpg for slides
+```{r}
+jpeg("./IAGLR_tree.jpg", width = 32, height = 32, units = "in", quality = 100, res = 300)
+WAE_genpop_nei_rotate = dendextend::rotate(WAE_genpop_nei, 42)
+WAE_genpop_nei_rotate = dendextend::rotate(WAE_genpop_nei_rotate, 41)
+
+WAE_genpop_nei$tip.label
+
+WAE_genpop_nei_rotate %>% 
+  rotateConstr(constraint = c(
+    "WolfR_",
+    "Lake_Wisconsin",
+    "Willow_Flowage", 
+    "Big_Arbor_Vitae",
+    "Manitowish_Lake"
+
+
+
+    )
+  ) %>%
+  plot(type = "phylogram",
+     tip.color = repu_mono_MN_shades2, 
+     use.edge.length = TRUE,
+     node.pos = 1, 
+     show.tip.label = TRUE, 
+     show.node.label = F,
+     edge.color = "black", 
+     edge.width = 5, 
+     edge.lty = 1, 
+     font = 2,
+     cex = 5, 
+     adj = NULL, 
+     srt = 0, 
+     no.margin = FALSE,
+     root.edge = FALSE, 
+     label.offset = 0, 
+     underscore = FALSE,
+     x.lim = NULL, 
+     y.lim = NULL, 
+     direction = "rightwards",
+     lab4ut = NULL, 
+     plot = TRUE,
+     rotate.tree = 0, 
+     open.angle = 0, 
+     node.depth = 15,
+     align.tip.label = FALSE)
+nodelabels(WAE_genpop_nei_rotate$node.label, adj = c(1.3, -0.5), frame = "n", cex = 3,
+           font = 3, xpd = TRUE)
 dev.off()
 ```
 
